feat: Add JavaFX support and implement main game structure
- Introduced JavaFX libraries for media and web rendering.
- Created scripts for building and running the JavaFX application.
- Implemented the main application class (MainApp) to initialize the game window.
- Developed the game controller (GameController) to manage scene transitions.
- Added UI components for main menu (MainMenuView) and element selection (ElementSelectionView).
- Implemented battle mechanics with animations in BattleView.
- Created domain model for battle elements (ElementoBatalla) with combat logic.
- Styled the application with CSS for a cohesive visual experience.
- Added resource files for game assets and styles.